# vfp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  settings.json  startup.cpp  startup.h  utils.cpp  utils.h  vfpResources.qrc
Model/: instrument.cpp  instrument.h  instsocket.cpp  instsocket.h  provider.cpp  provider.h  settings.cpp  settings.h
View/: aboutbox.cpp  aboutbox.h  aboutbox.ui  controltab.cpp  controltab.h  controltab.ui  mainview.cpp  mainview.h  mainview.ui  setuptab.cpp  setuptab.h  setuptab.ui
ViewMgr/: controlviewmanager.cpp  controlviewmanager.h  setupviewmanager.cpp  setupviewmanager.h
